[Clang][Windows] Options.cpp(317,25): error: no matching function for call to 'optionTypeSpecificIndex' https://bugs.webkit.org/show_bug.cgi?id=203142

Unreviewed build fix

clang-cl reported a compilation error for MSVC bug workaround code of optionTypeSpecificIndex.

runtime\Options.cpp(294,12): error: variables defined in a constexpr function must be initialized
    size_t index;
           ^
* runtime/Options.cpp:
(JSC::optionTypeSpecificIndex): Initialize the variable 'index'.

Canonical link: https://commits.webkit.org/216542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251276 268f45cc-cd09-0410-ab3c-d52691b4dbfc